upload file component

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 0px;
+    /* padding: 10px 0px; */
+    padding: 10px 100px;
 }
 
 .header-logo-container{
