--- a/src/components/Projects/index.css
+++ b/src/components/Projects/index.css
@@ -3,7 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: space-between;
-    padding: 20px 0;
+    /* padding: 20px 0; */
+    padding: 10px 100px;
+    /* filter: blur(20px); */
 }
 
 .project-header-container{
